--- a/.github/workflows/ci-default.yml
+++ b/.github/workflows/ci-default.yml
@@ -5,6 +5,7 @@ on:
     branches:
     pull_request:
     paths:
+    - '.github/workflows/ci-default.yml'
     - 'templates/default/**'
 
 defaults:
