--- a/templates/default/package.json
+++ b/templates/default/package.json
@@ -8,9 +8,19 @@
 		"lint": "eslint . --config config/.eslintrc.js --ignore-pattern build",
 		"test": "jest --config config/jest.config.js"
 	},
-	"browserslist": [
-		"last 2 Chrome versions"
-	],
+	"browserslist": {
+		"production": [
+			"> 1%",
+			"last 2 versions",
+			"not dead",
+			"not ie 11"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
 	"prettier": "./config/prettier.config.js",
 	"dependencies": {
 		"costro": "^1.0.0-rc.1"
@@ -18,11 +28,12 @@
 	"devDependencies": {
 		"@babel/core": "^7.16.0",
 		"@babel/eslint-parser": "^7.16.3",
-		"@babel/plugin-proposal-class-properties": "^7.16.0",
 		"@babel/plugin-transform-react-jsx": "^7.16.0",
 		"@babel/preset-env": "^7.16.0",
+		"babel-jest": "^27.4.6",
 		"babel-loader": "^8.2.2",
 		"css-loader": "^6.5.1",
+		"css-minimizer-webpack-plugin": "^3.3.1",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^4.0.0",
@@ -31,8 +42,6 @@
 		"jest": "^27.4.7",
 		"mini-css-extract-plugin": "^2.4.5",
 		"postcss": "^8.3.11",
-		"postcss-custom-media": "^8.0.0",
-		"postcss-import": "^14.0.2",
 		"postcss-loader": "^6.2.0",
 		"postcss-nested": "^5.0.6",
 		"postcss-preset-env": "^7.2.3",
