--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,22 +1,26 @@
-name: ci-typescript
+name: ci-default
 
 on:
   push:
     branches:
     pull_request:
     paths:
-    - '.github/workflows/ci-typescript.yml'
-    - 'templates/typescript/**'
+    - '.github/workflows/ci-default.yml'
+    - 'templates/default/**'
 
 defaults:
   run:
     shell: bash
-    working-directory: templates/typescript
+    working-directory: templates/default
 
 jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 60
+    strategy:
+      matrix:
+        node: [12, 14, 16]
+        dir: ['templates/default', 'templates/typescript']
     steps:
       - uses: actions/checkout@v2
 
@@ -32,12 +36,9 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
 
-      - name: Read .nvmrc
-        run: echo NVMRC=`cat .nvmrc` >> $GITHUB_ENV
-
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
-          node-version: ${{ env.NVMRC }}
+          node-version: ${{ matrix.node }}
 
       - name: Install dependencies
         run: npm ci
