--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "costro-app-templates",
+	"name": "costro-templates",
 	"version": "1.0.0",
 	"description": "Costro templates for create-costro",
 	"keywords": [
