--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,10 @@ jobs:
       matrix:
         node: [12, 14, 16]
         dir: ['templates/default', 'templates/typescript']
+    defaults:
+      run:
+        shell: bash
+        working-directory: ${{ matrix.dir }}
     steps:
       - uses: actions/checkout@v2
 
