--- a/templates/default/package.json
+++ b/templates/default/package.json
@@ -32,15 +32,16 @@
 		"@babel/preset-env": "^7.16.0",
 		"babel-jest": "^27.4.6",
 		"babel-loader": "^8.2.2",
+		"copy-webpack-plugin": "^10.2.0",
 		"css-loader": "^6.5.1",
 		"css-minimizer-webpack-plugin": "^3.3.1",
-		"eslint": "^7.32.0",
+		"eslint": "^8.7.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-react": "^7.27.0",
 		"html-webpack-plugin": "^5.5.0",
 		"jest": "^27.4.7",
-		"mini-css-extract-plugin": "^2.4.5",
+		"mini-css-extract-plugin": "^2.5.1",
 		"postcss": "^8.3.11",
 		"postcss-loader": "^6.2.0",
 		"postcss-nested": "^5.0.6",
@@ -53,6 +54,6 @@
 		"webpack-dev-server": "^4.7.3"
 	},
 	"engines": {
-		"node": ">= 12"
+		"node": ">= 12.22.0"
 	}
 }
