--- a/templates/typescript/package.json
+++ b/templates/typescript/package.json
@@ -34,15 +34,16 @@
 		"@typescript-eslint/eslint-plugin": "^5.9.1",
 		"@typescript-eslint/parser": "^5.9.1",
 		"babel-loader": "^8.2.2",
+		"copy-webpack-plugin": "^10.2.0",
 		"css-loader": "^6.5.1",
 		"css-minimizer-webpack-plugin": "^3.3.1",
-		"eslint": "^7.32.0",
+		"eslint": "^8.7.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-react": "^7.27.0",
 		"html-webpack-plugin": "^5.5.0",
 		"jest": "^27.4.7",
-		"mini-css-extract-plugin": "^2.4.5",
+		"mini-css-extract-plugin": "^2.5.1",
 		"postcss": "^8.3.11",
 		"postcss-loader": "^6.2.0",
 		"postcss-nested": "^5.0.6",
@@ -50,7 +51,7 @@
 		"postcss-url": "^10.1.3",
 		"prettier": "^2.5.1",
 		"terser-webpack-plugin": "^5.2.5",
-		"ts-jest": "^27.1.2",
+		"ts-jest": "^27.1.3",
 		"ts-loader": "^9.2.6",
 		"typescript": "^4.5.4",
 		"webpack": "^5.64.0",
@@ -58,6 +59,6 @@
 		"webpack-dev-server": "^4.7.3"
 	},
 	"engines": {
-		"node": ">= 12"
+		"node": ">= 12.22.0"
 	}
 }
