--- a/.github/workflows/ci-typescript.yml
+++ b/.github/workflows/ci-typescript.yml
@@ -1,9 +1,12 @@
-name: ci
+name: ci-typescript
 
 on:
   push:
     branches:
     pull_request:
+    paths:
+    - '.github/workflows/ci-typescript.yml'
+    - 'templates/typescript/**'
 
 jobs:
   build:
@@ -12,7 +15,7 @@ jobs:
     strategy:
       matrix:
         node: [12, 14, 16]
-        dir: ['templates/default', 'templates/typescript']
+        dir: ['templates/typescript']
     defaults:
       run:
         shell: bash
