--- a/.github/workflows/ci-typescript.yml
+++ b/.github/workflows/ci-typescript.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
           cache: 'npm'
-          cache-dependency-path: ./package-lock.json
+          cache-dependency-path: templates/typescript/package-lock.json
 
       - name: Install dependencies
         run: npm ci
