Re-add package lock and exclude them for npm Fix prettier

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 	"license": "MIT",
 	"author": "Joris DANIEL",
 	"files": [
-		"templates"
+		"templates",
+		"!templates/**/package-lock.json"
 	],
 	"engines": {
 		"node": ">= 12"
