--- a/templates/typescript/package.json
+++ b/templates/typescript/package.json
@@ -42,7 +42,8 @@
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-react": "^7.27.0",
 		"html-webpack-plugin": "^5.5.0",
-		"jest": "^27.4.7",
+		"jest": "^28.0.0-alpha.8",
+		"jest-environment-jsdom": "^28.0.0-alpha.8",
 		"mini-css-extract-plugin": "^2.5.1",
 		"postcss": "^8.3.11",
 		"postcss-loader": "^6.2.0",
