--- a/.github/workflows/ci-default-skip.yml
+++ b/.github/workflows/ci-default-skip.yml
@@ -12,5 +12,10 @@ jobs:
   build:
     name: default-build
     runs-on: ubuntu-latest
+    timeout-minutes: 60
+    strategy:
+      matrix:
+        node: [12, 14, 16]
+        dir: ['templates/default']
     steps:
       - run: 'echo "No build required" '
