--- a/.github/workflows/ci-typescript-skip.yml
+++ b/.github/workflows/ci-typescript-skip.yml
@@ -12,5 +12,10 @@ jobs:
   build:
     name: typescript-build
     runs-on: ubuntu-latest
+    timeout-minutes: 60
+    strategy:
+      matrix:
+        node: [12, 14, 16]
+        dir: ['templates/typescript']
     steps:
       - run: 'echo "No build required" '
