--- a/.github/workflows/ci-default.yml
+++ b/.github/workflows/ci-default.yml
@@ -3,7 +3,13 @@ name: ci-default
 on:
   push:
     branches:
-    pull_request:
+      - main
+    paths:
+    - '.github/workflows/ci-default.yml'
+    - 'templates/default/**'
+  pull_request:
+    branches:
+      - main
     paths:
     - '.github/workflows/ci-default.yml'
     - 'templates/default/**'
@@ -15,16 +21,16 @@ jobs:
     timeout-minutes: 60
     strategy:
       matrix:
-        node: [12, 14, 16]
+        node: [16, 18, 20]
         dir: ['templates/default']
     defaults:
       run:
         shell: bash
         working-directory: ${{ matrix.dir }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - uses: actions/setup-node@v2
+      - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
           cache: 'npm'
