Rename default workflow Use npm publish workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: ci-default
+name: Build
 
 on:
   push:
@@ -43,22 +43,3 @@ jobs:
 
       - name: Build
         run: npm run build
-
-  publish-npm:
-    runs-on: ubuntu-latest
-    if: success() &&
-      github.event_name == 'release' &&
-      github.event.release.target_commitish == 'main'
-    environment: npm
-    needs: build
-    steps:
-      - uses: actions/checkout@v3
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-          registry-url: 'https://registry.npmjs.org'
-
-      - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
