--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,39 +7,15 @@ on:
   pull_request:
     branches:
       - main
-  release:
-    types: [published]
 
 jobs:
   build:
-    name: default-build
-    runs-on: ubuntu-latest
-    timeout-minutes: 60
     strategy:
       matrix:
-        node: [16, 18, 20]
+        node-version: [16, 18, 20]
         dir: ['templates/default', 'templates/typescript']
-    defaults:
-      run:
-        shell: bash
-        working-directory: ${{ matrix.dir }}
-    steps:
-      - uses: actions/checkout@v3
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node }}
-          cache: 'npm'
-          cache-dependency-path: templates/default/package-lock.json
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Lint
-        run: npm run lint
-
-      - name: Test
-        run: npm run test
-
-      - name: Build
-        run: npm run build
+    uses: yoriiis/actions/.github/workflows/test-and-build.yml@main
+    with:
+      node-version: ${{ matrix.node-version }}
+      command-test: npm run lint && npm run test
+      working-directory: ${{ matrix.dir }}
