--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         node-version: [16, 18, 20]
-        dir: ['templates/default', 'templates/typescript']
+        dir: ['./templates/default', './templates/typescript']
     uses: yoriiis/actions/.github/workflows/test-and-build.yml@main
     with:
       node-version: ${{ matrix.node-version }}
