Add JSX automatic runtime on default template

--- a/templates/default/package.json
+++ b/templates/default/package.json
@@ -23,13 +23,13 @@
 	},
 	"prettier": "./config/prettier.config.js",
 	"dependencies": {
-		"costro": "^1.0.6"
+		"costro": "^2.1.2"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.21.8",
 		"@babel/eslint-parser": "^7.21.8",
-		"@babel/plugin-transform-react-jsx": "^7.21.5",
 		"@babel/preset-env": "^7.21.5",
+		"@babel/preset-react": "^7.22.5",
 		"babel-jest": "^29.5.0",
 		"babel-loader": "^9.1.2",
 		"copy-webpack-plugin": "^11.0.0",
