Add JSX automatic runtime on typescript template

--- a/templates/typescript/tsconfig.json
+++ b/templates/typescript/tsconfig.json
@@ -6,12 +6,11 @@
 		"checkJs": false,
 		"declaration": false,
 		"esModuleInterop": true,
-		"jsx": "react",
-		"jsxFactory": "h",
-		"jsxFragmentFactory": "F",
+		"jsx": "react-jsx",
+		"jsxImportSource": "costro",
 		"lib": ["DOM.Iterable", "dom", "es2021"],
 		"module": "esnext",
-		"moduleResolution": "node",
+		"moduleResolution": "Bundler",
 		"outDir": "./lib",
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
