--- a/templates/typescript/tsconfig.json
+++ b/templates/typescript/tsconfig.json
@@ -7,15 +7,15 @@
 		"declaration": false,
 		"esModuleInterop": true,
 		"jsx": "react-jsx",
-		"jsxImportSource": "costro",
+		"jsxImportSource": "jsx-dom",
 		"lib": ["DOM.Iterable", "dom", "es2021"],
-		"module": "esnext",
-		"moduleResolution": "Bundler",
+		"module": "ESNext",
+		"moduleResolution": "bundler",
 		"outDir": "./lib",
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"strict": true,
-		"target": "es2017",
+		"target": "ESNext",
 		"removeComments": true
 	},
 	"include": ["./src/**/*.ts", "./src/**/*.tsx"]
