--- a/templates/default/package.json
+++ b/templates/default/package.json
@@ -2,10 +2,11 @@
 	"name": "create-costro-app",
 	"version": "1.0.0",
 	"private": true,
+	"type": "module",
 	"scripts": {
 		"build": "webpack --config config/webpack.config.js --mode=production",
 		"dev": "webpack serve --config config/webpack.config.js --mode=development",
-		"lint": "eslint . --config config/.eslintrc.js --ignore-pattern build",
+		"lint": "biome check --write",
 		"test": "jest --config config/jest.config.js"
 	},
 	"browserslist": {
@@ -21,40 +22,37 @@
 			"last 1 safari version"
 		]
 	},
-	"prettier": "./config/prettier.config.js",
+	"prettier": "./config/prettier.config.cjs",
 	"dependencies": {
 		"costro": "^2.2.0"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.21.8",
-		"@babel/eslint-parser": "^7.21.8",
-		"@babel/preset-env": "^7.21.5",
-		"@babel/preset-react": "^7.22.5",
-		"babel-jest": "^29.5.0",
-		"babel-loader": "^9.1.2",
-		"copy-webpack-plugin": "^11.0.0",
-		"css-loader": "^6.7.4",
-		"css-minimizer-webpack-plugin": "^5.0.0",
-		"eslint": "^8.41.0",
-		"eslint-config-prettier": "^8.8.0",
-		"eslint-plugin-prettier": "^4.2.1",
-		"eslint-plugin-react": "^7.32.2",
-		"html-webpack-plugin": "^5.5.1",
-		"jest": "^29.5.0",
-		"jest-environment-jsdom": "^29.5.0",
-		"mini-css-extract-plugin": "^2.7.6",
-		"postcss": "^8.4.31",
-		"postcss-loader": "^7.3.0",
-		"postcss-nested": "^6.0.1",
-		"postcss-preset-env": "^8.4.1",
+		"@babel/core": "^7.27.1",
+		"@babel/preset-env": "^7.27.2",
+		"@babel/preset-react": "^7.27.1",
+		"@biomejs/biome": "^1.9.4",
+		"babel-jest": "^29.7.0",
+		"babel-loader": "^10.0.0",
+		"copy-webpack-plugin": "^13.0.0",
+		"css-loader": "^7.1.2",
+		"css-minimizer-webpack-plugin": "^7.0.2",
+		"html-webpack-plugin": "^5.6.3",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"jsx-dom": "^8.1.4",
+		"mini-css-extract-plugin": "^2.9.2",
+		"postcss": "^8.5.3",
+		"postcss-loader": "^8.1.1",
+		"postcss-nested": "^7.0.2",
+		"postcss-preset-env": "^10.1.6",
 		"postcss-url": "^10.1.3",
-		"prettier": "^2.8.8",
-		"terser-webpack-plugin": "^5.3.9",
-		"webpack": "^5.94.0",
-		"webpack-cli": "^5.1.1",
-		"webpack-dev-server": "^4.15.0"
+		"prettier": "^3.5.3",
+		"terser-webpack-plugin": "^5.3.14",
+		"webpack": "^5.99.8",
+		"webpack-cli": "^6.0.1",
+		"webpack-dev-server": "^5.2.1"
 	},
 	"engines": {
-		"node": ">=16.20.0"
+		"node": ">=20.18.0"
 	}
 }
