--- a/templates/default/package.json
+++ b/templates/default/package.json
@@ -24,7 +24,8 @@
 	},
 	"prettier": "./config/prettier.config.cjs",
 	"dependencies": {
-		"costro": "^2.2.0"
+		"costro": "^2.2.0",
+		"jsx-dom-cjs": "^8.1.4"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.27.1",
@@ -48,6 +49,7 @@
 		"postcss-url": "^10.1.3",
 		"prettier": "^3.5.3",
 		"terser-webpack-plugin": "^5.3.14",
+		"ts-jest": "^29.3.2",
 		"webpack": "^5.99.8",
 		"webpack-cli": "^6.0.1",
 		"webpack-dev-server": "^5.2.1"
