--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     strategy:
       matrix:
-        node-version: [16, 18, 20]
+        node-version: [22, 24]
         dir: ['templates/default', 'templates/typescript']
     uses: yoriiis/actions/.github/workflows/test-and-build.yml@main
     with:
