--- a/templates/default/package.json
+++ b/templates/default/package.json
@@ -24,13 +24,14 @@
 	},
 	"prettier": "./config/prettier.config.js",
 	"dependencies": {
-		"costro": "^2.2.0"
+		"costro": "^2.2.0",
+		"jsx-dom": "^8.1.6"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^2.3.6",
 		"@babel/core": "^7.28.5",
 		"@babel/preset-env": "^7.28.5",
 		"@babel/preset-react": "^7.28.5",
+		"@biomejs/biome": "^2.3.6",
 		"babel-jest": "^30.2.0",
 		"babel-loader": "^10.0.0",
 		"copy-webpack-plugin": "^13.0.1",
@@ -52,6 +53,6 @@
 		"webpack-dev-server": "^5.2.2"
 	},
 	"engines": {
-		"node": ">=16.20.0"
+		"node": ">=22"
 	}
 }
